; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_rtl2832.c_rtl2832_pid_filter_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_rtl2832.c_rtl2832_pid_filter_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.rtl2832_dev* }
%struct.rtl2832_dev = type { i32, i64, %struct.i2c_client* }
%struct.i2c_client = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"onoff=%d, slave_ts=%d\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"failed=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32)* @rtl2832_pid_filter_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl2832_pid_filter_ctrl(%struct.dvb_frontend* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.rtl2832_dev*, align 8
  %7 = alloca %struct.i2c_client*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %11 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %10, i32 0, i32 0
  %12 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %11, align 8
  store %struct.rtl2832_dev* %12, %struct.rtl2832_dev** %6, align 8
  %13 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %6, align 8
  %14 = getelementptr inbounds %struct.rtl2832_dev, %struct.rtl2832_dev* %13, i32 0, i32 2
  %15 = load %struct.i2c_client*, %struct.i2c_client** %14, align 8
  store %struct.i2c_client* %15, %struct.i2c_client** %7, align 8
  %16 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %17 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %16, i32 0, i32 0
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %6, align 8
  %20 = getelementptr inbounds %struct.rtl2832_dev, %struct.rtl2832_dev* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = call i32 (i32*, i8*, i32, ...) @dev_dbg(i32* %17, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %18, i64 %21)
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %2
  store i32 128, i32* %9, align 4
  br label %27

26:                                               ; preds = %2
  store i32 0, i32* %9, align 4
  br label %27

27:                                               ; preds = %26, %25
  %28 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %6, align 8
  %29 = getelementptr inbounds %struct.rtl2832_dev, %struct.rtl2832_dev* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %38

32:                                               ; preds = %27
  %33 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %6, align 8
  %34 = getelementptr inbounds %struct.rtl2832_dev, %struct.rtl2832_dev* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* %9, align 4
  %37 = call i32 @regmap_update_bits(i32 %35, i32 33, i32 192, i32 %36)
  store i32 %37, i32* %8, align 4
  br label %44

38:                                               ; preds = %27
  %39 = load %struct.rtl2832_dev*, %struct.rtl2832_dev** %6, align 8
  %40 = getelementptr inbounds %struct.rtl2832_dev, %struct.rtl2832_dev* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @regmap_update_bits(i32 %41, i32 97, i32 192, i32 %42)
  store i32 %43, i32* %8, align 4
  br label %44

44:                                               ; preds = %38, %32
  %45 = load i32, i32* %8, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %44
  br label %49

48:                                               ; preds = %44
  store i32 0, i32* %3, align 4
  br label %55

49:                                               ; preds = %47
  %50 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %51 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %50, i32 0, i32 0
  %52 = load i32, i32* %8, align 4
  %53 = call i32 (i32*, i8*, i32, ...) @dev_dbg(i32* %51, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %52)
  %54 = load i32, i32* %8, align 4
  store i32 %54, i32* %3, align 4
  br label %55

55:                                               ; preds = %49, %48
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @dev_dbg(i32*, i8*, i32, ...) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
